src/style/style.scss
:root {
  --cloudy: url(images/cloudy.jpg);
  --rainy: url(images/rainy.jpg);
  --sunny: url(images/sunny.jpg);
  --smog: url(images/smog.jpg);
  --misty: url(images/misty.jpg);
  --snowy: url(images/snowy.jpg);
  --thunder: url(images/thunderstorm.jpg);
}

%icon-display {
  display: inline-block;
  height: 32px;
  width: 32px;
  content: "";
  background-size: cover;
  margin-right: 4px;
  vertical-align: middle;
}

body,
html {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

body {
  display: flex;
  justify-content: space-between;
  background-repeat: no-repeat;
  background-image: var(--cloudy);
  background-size: cover;
  background-position: center;
}

form {
  margin-top: 1%;
  margin-right: 2%;
}

#city-name {
  background-color: rgba(56, 56, 56, 0.3);
  border-radius: 0.5rem;
  border: none;
  outline: none;
  font-size: 1rem;
  padding: 0.813rem;
  padding-left: 0.625rem;
  padding-right: 0.625rem;
}

input {
  color: white;
  font-family: "Lucida Console", "Courier New", monospace;
}

::placeholder {
  color: rgb(224, 224, 224);
}

input:focus::placeholder {
  color: transparent;
}

button {
  display: none;
}

#weather-display {
  font-family: "Merriweather", serif;
  display: flex;
  align-self: center;
  background-color: rgb(56, 56, 56, 0.4);
  color: white;
  padding: 2.5rem;
  padding-top: 3.125rem;
  padding-bottom: 3.125rem;
  margin-left: 25%;
  margin-bottom: 6%;
}

#left-side {
  border-right: 2px solid white;
  padding-right: 0.625rem;
}

#name {
  font-size: 3.125rem;
  font-weight: bold;
}

#conditions {
  text-decoration: underline;
  font-size: 1.875rem;
}

#right-side {
  padding-left: 0.625rem;
  font-size: 1.25rem;
}

#temp::before,
#temp-like::before {
  @extend %icon-display;
  background-image: url(images/temperature.png);
}

#humidity::before {
  @extend %icon-display;
  background-image: url(images/humidity.png);
}

#wind::before {
  @extend %icon-display;
  background-image: url(images/wind.png);
}

@media (max-width: 360px) {
  #weather-display {
    padding: 0.625rem;
  }
  #humidity::before,
  #wind::before,
  #temp::before,
  #temp-like::before {
    display: block;
  }
}

@media (max-width: 550px) {
  body {
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-between;
    align-items: center;
  }
  #weather-display {
    align-self: center;
    margin-left: 0;
    margin-bottom: 50%;
    padding: 0.938rem;
    padding-top: 1.063rem;
    padding-bottom: 1.063rem;
  }
}

@media (max-width: 1000px) and (min-width: 551px) {
  body {
    gap: 0.625rem;
  }
  form {
    margin-right: 0;
  }
  #weather-display {
    margin-left: 0;
  }
}

